[UPD] Table creation update.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,225 @@
           </nav>
     </header>
     
-    <main></main>
+    <main>
+        <div class="container">
+            <div class="row mt-2">
+                <div class="col-6">
+                    <p class="fs-1">Catalogo Libri</p>
+                </div>
+                <div class="col-6 text-end">
+                    <button type="button" class="btn btn-primary">Aggiungi Libro</button>
+                </div>
+            </div>
+            <div class="row mt-2">
+                <div class="col">
+                    <table class="table table-striped">
+                        <thead>
+                          <tr>
+                            <th scope="col">Titolo</th>
+                            <th scope="col">Stato</th>
+                            <th scope="col" class="text-center">Azioni</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td>I pilastri della terra</td>
+                            <td>
+                                <button type="button" class="btn btn-success" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
+                                    Disponibile
+                                </button>
+                            </td>
+                            <td class="d-flex">
+                                <button type="button" class="btn btn-outline-secondary btn-sm me-1">
+                                    <i class="fa-solid fa-pen fa-sm" style="color: #7a7a7a;"></i>
+                                </button>
+                                <button type="button" class="btn btn-outline-secondary btn-sm">
+                                    <i class="fa-solid fa-trash fa-sm" style="color: #606060;"></i>
+                                </button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>I promessi sposi</td>
+                            <td>
+                                <button type="button" class="btn btn-success" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
+                                    Disponibile
+                                </button>
+                            </td>
+                            <td class="d-flex">
+                                <button type="button" class="btn btn-outline-secondary btn-sm me-1">
+                                    <i class="fa-solid fa-pen fa-sm" style="color: #7a7a7a;"></i>
+                                </button>
+                                <button type="button" class="btn btn-outline-secondary btn-sm">
+                                    <i class="fa-solid fa-trash fa-sm" style="color: #606060;"></i>
+                                </button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>Il signore degli anelli</td>
+                            <td>
+                                <button type="button" class="btn btn-warning text-white" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
+                                    In prestito
+                                </button>
+                            </td>
+                            <td class="d-flex">
+                                <button type="button" class="btn btn-outline-secondary btn-sm me-1">
+                                    <i class="fa-solid fa-pen fa-sm" style="color: #7a7a7a;"></i>
+                                </button>
+                                <button type="button" class="btn btn-outline-secondary btn-sm">
+                                    <i class="fa-solid fa-trash fa-sm" style="color: #606060;"></i>
+                                </button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>Harry Potter e la pietra filosofale</td>
+                            <td>
+                                <button type="button" class="btn btn-success" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
+                                    Disponibile
+                                </button>
+                            </td>
+                            <td class="d-flex">
+                                <button type="button" class="btn btn-outline-secondary btn-sm me-1">
+                                    <i class="fa-solid fa-pen fa-sm" style="color: #7a7a7a;"></i>
+                                </button>
+                                <button type="button" class="btn btn-outline-secondary btn-sm">
+                                    <i class="fa-solid fa-trash fa-sm" style="color: #606060;"></i>
+                                </button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>Il codice Da Vinci</td>
+                            <td>
+                                <button type="button" class="btn btn-danger" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
+                                    Non disponibile
+                                </button>
+                            </td>
+                            <td class="d-flex">
+                                <button type="button" class="btn btn-outline-secondary btn-sm me-1">
+                                    <i class="fa-solid fa-pen fa-sm" style="color: #7a7a7a;"></i>
+                                </button>
+                                <button type="button" class="btn btn-outline-secondary btn-sm">
+                                    <i class="fa-solid fa-trash fa-sm" style="color: #606060;"></i>
+                                </button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>Shining</td>
+                            <td>
+                                <button type="button" class="btn btn-success" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
+                                    Disponibile
+                                </button>
+                            </td>
+                            <td class="d-flex">
+                                <button type="button" class="btn btn-outline-secondary btn-sm me-1">
+                                    <i class="fa-solid fa-pen fa-sm" style="color: #7a7a7a;"></i>
+                                </button>
+                                <button type="button" class="btn btn-outline-secondary btn-sm">
+                                    <i class="fa-solid fa-trash fa-sm" style="color: #606060;"></i>
+                                </button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>La divina commedia</td>
+                            <td>
+                                <button type="button" class="btn btn-warning text-white" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
+                                    In prestito
+                                </button>
+                            </td>
+                            <td class="d-flex">
+                                <button type="button" class="btn btn-outline-secondary btn-sm me-1">
+                                    <i class="fa-solid fa-pen fa-sm" style="color: #7a7a7a;"></i>
+                                </button>
+                                <button type="button" class="btn btn-outline-secondary btn-sm">
+                                    <i class="fa-solid fa-trash fa-sm" style="color: #606060;"></i>
+                                </button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>Il trono di spade</td>
+                            <td>
+                                <button type="button" class="btn btn-success" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
+                                    Disponibile
+                                </button>
+                            </td>
+                            <td class="d-flex">
+                                <button type="button" class="btn btn-outline-secondary btn-sm me-1">
+                                    <i class="fa-solid fa-pen fa-sm" style="color: #7a7a7a;"></i>
+                                </button>
+                                <button type="button" class="btn btn-outline-secondary btn-sm">
+                                    <i class="fa-solid fa-trash fa-sm" style="color: #606060;"></i>
+                                </button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>Il mondo di Sofia</td>
+                            <td>
+                                <button type="button" class="btn btn-danger" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
+                                    Non disponibile
+                                </button>
+                            </td>
+                            <td class="d-flex">
+                                <button type="button" class="btn btn-outline-secondary btn-sm me-1">
+                                    <i class="fa-solid fa-pen fa-sm" style="color: #7a7a7a;"></i>
+                                </button>
+                                <button type="button" class="btn btn-outline-secondary btn-sm">
+                                    <i class="fa-solid fa-trash fa-sm" style="color: #606060;"></i>
+                                </button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>Le cronache di Narnia: il leone, la strega e l'armadio</td>
+                            <td>
+                                <button type="button" class="btn btn-warning text-white" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
+                                    In prestito
+                                </button>
+                            </td>
+                            <td class="d-flex">
+                                <button type="button" class="btn btn-outline-secondary btn-sm me-1">
+                                    <i class="fa-solid fa-pen fa-sm" style="color: #7a7a7a;"></i>
+                                </button>
+                                <button type="button" class="btn btn-outline-secondary btn-sm">
+                                    <i class="fa-solid fa-trash fa-sm" style="color: #606060;"></i>
+                                </button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>Il piccolo principe</td>
+                            <td>
+                                <button type="button" class="btn btn-success" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
+                                    Disponibile
+                                </button>
+                            </td>
+                            <td class="d-flex">
+                                <button type="button" class="btn btn-outline-secondary btn-sm me-1">
+                                    <i class="fa-solid fa-pen fa-sm" style="color: #7a7a7a;"></i>
+                                </button>
+                                <button type="button" class="btn btn-outline-secondary btn-sm">
+                                    <i class="fa-solid fa-trash fa-sm" style="color: #606060;"></i>
+                                </button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>La storia infinita</td>
+                            <td>
+                                <button type="button" class="btn btn-success" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
+                                    Disponibile
+                                </button>
+                            </td>
+                            <td class="d-flex">
+                                <button type="button" class="btn btn-outline-secondary btn-sm me-1">
+                                    <i class="fa-solid fa-pen fa-sm" style="color: #7a7a7a;"></i>
+                                </button>
+                                <button type="button" class="btn btn-outline-secondary btn-sm">
+                                    <i class="fa-solid fa-trash fa-sm" style="color: #606060;"></i>
+                                </button>
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>
+                </div>
+            </div>
+        </div>
+    </main>
 
 
 
