--- a/index.html
+++ b/index.html
@@ -285,6 +285,31 @@
                       </div>
                 </div>
             </div>
+            <div class="row mt-2">
+                <div class="col-12">
+                    <div class="card">
+                        <div class="card-header">
+                          <p class="fs-2">F.A.Q.</p>
+                        </div>
+                        <div class="card-body">
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">
+                                    <span>Come aggiungere un nuovo libro?</span>
+                                    <span><i class="fa-solid fa-chevron-down fa-sm" style="color: #606060;"></i></span>
+                                </li>
+                                <li class="list-group-item">
+                                    <span>Come posson accedere all'anagrafica utenti?</span>
+                                    <span><i class="fa-solid fa-chevron-down fa-sm" style="color: #606060;"></i></span>
+                                </li>
+                                <li class="list-group-item">
+                                    <span>Posso usare questa dashboard da mobile?</span>
+                                    <span><i class="fa-solid fa-chevron-down fa-sm" style="color: #606060;"></i></span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
