--- a/index.html
+++ b/index.html
@@ -10,33 +10,33 @@
 </head>
 <body>
     
-    <header>
+    <header class="bg-dark">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
               <img src="./img/duck.png" alt="logo" class="m-2">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+              <button class="btn btn-outline-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fa-solid fa-bars" style="color: #aaaaaa;"></i>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Catalogo libri</a>
+                    <a class="nav-link active text-white" aria-current="page" href="#">Catalogo libri</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Anagrafica Utenti</a>
+                    <a class="nav-link text-secondary" href="#">Anagrafica Utenti</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link text-secondary" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Storico Prestiti
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Help</a>
+                    <a class="nav-link text-secondary" href="#">Help</a>
                   </li>
                 </ul>
                 <form class="d-flex" role="search">
                   <input class="form-control me-2" type="search" placeholder="Cerca..." aria-label="Cerca">
-                  <button class="btn btn-outline-success" type="submit">Cerca</button>
+                  <button class="btn btn-outline-light" type="submit">Cerca</button>
                 </form>
               </div>
             </div>
