[UPD] Main stylization update.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                           <tr>
                             <td>I pilastri della terra</td>
                             <td>
-                                <button type="button" class="btn btn-success" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
+                                <button type="button" class="btn btn-success fw-semibold" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
                                     Disponibile
                                 </button>
                             </td>
@@ -83,7 +83,7 @@
                           <tr>
                             <td>I promessi sposi</td>
                             <td>
-                                <button type="button" class="btn btn-success" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
+                                <button type="button" class="btn btn-success fw-semibold" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
                                     Disponibile
                                 </button>
                             </td>
@@ -99,7 +99,7 @@
                           <tr>
                             <td>Il signore degli anelli</td>
                             <td>
-                                <button type="button" class="btn btn-warning text-white" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
+                                <button type="button" class="btn btn-warning text-white fw-semibold" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
                                     In prestito
                                 </button>
                             </td>
@@ -115,7 +115,7 @@
                           <tr>
                             <td>Harry Potter e la pietra filosofale</td>
                             <td>
-                                <button type="button" class="btn btn-success" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
+                                <button type="button" class="btn btn-success fw-semibold" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
                                     Disponibile
                                 </button>
                             </td>
@@ -131,7 +131,7 @@
                           <tr>
                             <td>Il codice Da Vinci</td>
                             <td>
-                                <button type="button" class="btn btn-danger" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
+                                <button type="button" class="btn btn-danger fw-semibold" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
                                     Non disponibile
                                 </button>
                             </td>
@@ -147,7 +147,7 @@
                           <tr>
                             <td>Shining</td>
                             <td>
-                                <button type="button" class="btn btn-success" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
+                                <button type="button" class="btn btn-success fw-semibold" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
                                     Disponibile
                                 </button>
                             </td>
@@ -163,7 +163,7 @@
                           <tr>
                             <td>La divina commedia</td>
                             <td>
-                                <button type="button" class="btn btn-warning text-white" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
+                                <button type="button" class="btn btn-warning text-white fw-semibold" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
                                     In prestito
                                 </button>
                             </td>
@@ -179,7 +179,7 @@
                           <tr>
                             <td>Il trono di spade</td>
                             <td>
-                                <button type="button" class="btn btn-success" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
+                                <button type="button" class="btn btn-success fw-semibold" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
                                     Disponibile
                                 </button>
                             </td>
@@ -195,7 +195,7 @@
                           <tr>
                             <td>Il mondo di Sofia</td>
                             <td>
-                                <button type="button" class="btn btn-danger" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
+                                <button type="button" class="btn btn-danger fw-semibold" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
                                     Non disponibile
                                 </button>
                             </td>
@@ -211,7 +211,7 @@
                           <tr>
                             <td>Le cronache di Narnia: il leone, la strega e l'armadio</td>
                             <td>
-                                <button type="button" class="btn btn-warning text-white" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
+                                <button type="button" class="btn btn-warning text-white fw-semibold" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
                                     In prestito
                                 </button>
                             </td>
@@ -227,7 +227,7 @@
                           <tr>
                             <td>Il piccolo principe</td>
                             <td>
-                                <button type="button" class="btn btn-success" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
+                                <button type="button" class="btn btn-success fw-semibold" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
                                     Disponibile
                                 </button>
                             </td>
@@ -243,7 +243,7 @@
                           <tr>
                             <td>La storia infinita</td>
                             <td>
-                                <button type="button" class="btn btn-success" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
+                                <button type="button" class="btn btn-success fw-semibold" style="--bs-btn-padding-y: 0px; --bs-btn-font-size: .60rem;">
                                     Disponibile
                                 </button>
                             </td>
@@ -294,16 +294,34 @@
                         <div class="card-body">
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">
-                                    <span>Come aggiungere un nuovo libro?</span>
-                                    <span><i class="fa-solid fa-chevron-down fa-sm" style="color: #606060;"></i></span>
+                                    <div class="row">
+                                        <div class="col-10">
+                                            <span>Come aggiungere un nuovo libro?</span>
+                                        </div>
+                                        <div class="col-2 text-end">
+                                            <span><i class="fa-solid fa-chevron-down fa-sm" style="color: #606060;"></i></span>
+                                        </div>
+                                    </div>
                                 </li>
                                 <li class="list-group-item">
-                                    <span>Come posson accedere all'anagrafica utenti?</span>
-                                    <span><i class="fa-solid fa-chevron-down fa-sm" style="color: #606060;"></i></span>
+                                    <div class="row">
+                                        <div class="col-10">
+                                            <span>Come posso accedere all'anagrafica utenti?</span>
+                                        </div>
+                                        <div class="col-2 text-end">
+                                            <span><i class="fa-solid fa-chevron-down fa-sm" style="color: #606060;"></i></span>
+                                        </div>
+                                    </div>
                                 </li>
                                 <li class="list-group-item">
-                                    <span>Posso usare questa dashboard da mobile?</span>
-                                    <span><i class="fa-solid fa-chevron-down fa-sm" style="color: #606060;"></i></span>
+                                    <div class="row">
+                                        <div class="col-10">
+                                            <span>Posso usare questa dashboard da mobile?</span>
+                                        </div>
+                                        <div class="col-2 text-end">
+                                            <span><i class="fa-solid fa-chevron-down fa-sm" style="color: #606060;"></i></span>
+                                        </div>
+                                    </div>
                                 </li>
                             </ul>
                         </div>
